Fix incompatibility with mixed light/dark modes (#12) and removed content clipping

--- a/chrome.css
+++ b/chrome.css
@@ -9,10 +9,6 @@
 }
 
 @-moz-document url-prefix("chrome:") {
-	.browserContainer {
-		overflow: clip
-	}
-
 	findbar {
 		display: flex !important;
 
@@ -34,7 +30,7 @@
 		overflow: unset !important;
 		box-shadow: var(--box-shadow-10);
 
-		background: var(--zen-colors-tertiary) !important;
+		background: var(--toolbar-bgcolor) !important;
 		border: 1px solid var(--zen-colors-border) !important;
 
 		transition: transform 0.35s ease !important;
